@@ -7,7 +7,7 @@ int main( int argc, char ** argv )
 	QApplication a( argc, argv );
 	a.connect( &a, SIGNAL( lastWindowClosed() ), &a, SLOT( quit() ) );
 
-	FindSubtitlesDialog *w = new FindSubtitlesDialog(0);
+	FindSubtitlesWindow *w = new FindSubtitlesWindow(0);
 	w->show();
 
 	return a.exec();
